--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "sass": "^1.56.1",
         "vite": "^4.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.7.16",
+        "vuex": "^4.0.2"
     }
 }
